# roip-discord-bridge

./: .env.example  .gitignore  Dockerfile  PROTOCOL.md  README.md  pyproject.toml
radio_discord_bridge/: __init__.py  __main__.py  bridge.py  codec.py  config.py  discord_bot.py  mixer.py  multicast.py  ptt.py  rtp.py
scripts/: run-bridge.bat
